syntax = "proto3";
package jackaldao.canine.filetree;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/jackal-dao/canine/x/filetree/types";

// Msg defines the Msg service.
service Msg {
      rpc PostFile(MsgPostFile) returns (MsgPostFileResponse);
  rpc AddViewers(MsgAddViewers) returns (MsgAddViewersResponse);
  rpc Postkey(MsgPostkey) returns (MsgPostkeyResponse);
  rpc InitAccount(MsgInitAccount) returns (MsgInitAccountResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgPostFile {
  string creator = 1;
  string hashpath = 2;
  string contents = 3;
  string viewers = 4;
  string editors = 5;
}

message MsgPostFileResponse {
  string path = 1;
}

message MsgAddViewers {
  string creator = 1;
  string viewerIds = 2;
  string viewerKeys = 3;
  string address = 4;
  string fileowner = 5;
}

message MsgAddViewersResponse {
}

message MsgPostkey {
  string creator = 1;
  string key = 2;
}

message MsgPostkeyResponse {
}

message MsgInitAccount {
  string creator = 1;
  string rootHashpath = 2;
  string editors = 3;
  string key = 4; 
}

message MsgInitAccountResponse {
}

// this line is used by starport scaffolding # proto/tx/message